# agencia

./: Dockerfile  KenKen_RL.ipynb  LICENSE  README.md  compose-dev.yaml  docker_helper.sh  docker_logs.txt  helper.sh  pyproject.toml  requirements.txt  rl_kenken.py
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
.docker/: compose-dev.yaml  docker-compose.yaml
.github/workflows/: github-actions-demo.yml
agencia/: 0_CartPole-v1.py  agents.py  envs.py  infra.py  pyproject.toml
agencia/.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
agencia/0_project/: 0_CartPole-v1.py  0_LunarLander-v2.py  HelloWorld.py
projects/: 0_cartpole.py
