[tool.poetry]
name = "agencia"
version = "0.0.1"
description = "Base dev platform"
authors = ["Oliver Paisley <oliverjdpaisley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
numpy = "^1.25.2"
pandas = "^2.0.3"
tqdm = "^4.66.1"
gymnasium = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
